Enabling and improving tests.